# leibniz-alphabet

./: .env.template  AGENT_PROMPT.md  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
alphabet/primitives/: index.yaml
alphabet/primitives/by_domain/: _domain_index.yaml
alphabet/primitives/detailed/: P001.yaml  P002.yaml  P003.yaml  P004.yaml  P005.yaml  P006.yaml  P007.yaml  P008.yaml  P009.yaml  P010.yaml  P011.yaml  P012.yaml
alphabet/relationships/: graph.yaml
calculus/: operators.yaml  rules.yaml
docs/: AGENT_LOOP.md  CALCULUS_SPEC.md  DATA_SCHEMAS.md  IMPLEMENTATION_GUIDE.md  REASONING_PROTOCOL.md  TECHNICAL_SPEC.md  VALIDATION_FRAMEWORK.md
reasoning/: iteration_state.yaml
reasoning/logs/iteration_000/: critic.yaml  narrative.md  proposer.yaml  refiner.yaml
reasoning/logs/iteration_001/: critic.yaml  narrative.md  proposer.yaml  refiner.yaml
reasoning/logs/iteration_002/: critic.yaml  narrative.md  proposer.yaml  refiner.yaml
reasoning/logs/iteration_003/: critic.yaml  narrative.md  refiner.yaml  (+1 more)
reports/expressiveness/: history.yaml  iteration_006.yaml  iteration_006_encodings.md  iteration_010.yaml  iteration_010_encodings.md  iteration_011.yaml
src/alphabetum/: __init__.py
tests/: __init__.py
tests/integration/: __init__.py  test_basic_flow.py
tests/unit/: __init__.py  test_calculus.py  test_models.py  test_state_manager.py
tools/: analytics.py  expressiveness.py  generate_sample_data.py  run.py  session_runner.py  validate.py
validation/benchmarks/: test_concepts.yaml
validation/corpora/: logical_treatises.yaml
(+47 files in other folders)
